[ALL] Add Bar Button support with config etc.., test of stdin getting and other stuff

--- a/TODO
+++ b/TODO
@@ -3,5 +3,6 @@
   · Add XPM support
   · Add colors gradation for bar and titlebar maybe
   · Better tile layout
+  · Multi-Head support
   · Fix all the bug \o/
   · XCB ?
