[TODO] Add 1 thing

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+  · Add Doxygen comment
   · Mouse bindings in the config file
   · Can change client position in the tile grid
   · Add images support
