--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
   · Add Doxygen comment
   · Mouse bindings in the config file
   · Can change client position in the tile grid
-  · Add images support
+  · Add image support <- *.xpm: OK for now.
   · Multi-Head support
   · Fix all the bug \o/
   · XCB ?
