README: Add requirement
Signed-off-by: Marc Lagrange <markocpc@gmail.com>

--- a/README
+++ b/README
@@ -10,6 +10,14 @@ AUTHORS :
 
 LICENSE : BSD
 
+REQUIREMENT :
+  · libconfuse
+  · freetype2
+  · xpm
+  · xft
+  · libx11
+  · CMake >= 2.6
+
 INSTALL :
   · mkdir build
   · cd build
