CMake: Add LDFLAGS, wmfs now build on FreeBSD, update manpage and README.
Signed-off-by: Marc Lagrange <markocpc@gmail.com>

--- a/README
+++ b/README
@@ -20,7 +20,7 @@ REQUIREMENT :
 
 OS :
   · GNU/Linux : Supported.
-  · FreeBSD : In the way.
+  · FreeBSD : Build. Test in the way.
 
 INSTALL :
   · mkdir build
