--- a/README
+++ b/README
@@ -2,7 +2,7 @@ ABOUT :
 WMFS Window Manager.
   * Window Manager From Scratch
 
-Un WM tout bete, crée a partir de 0.
+A small Window Managed created from /dev/null. (;-))
 
 AUTHORS :
   * Code : Martin Duquesnoy <xorg62@gmail.com>
