README: fix typo
Signed-off-by: Marc Lagrange <markocpc@gmail.com>

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ ABOUT :
 WMFS Window Manager.
   * Window Manager From Scratch
 
-A small Window Managed created from /dev/null. (;-))
+A small Window Manager created from /dev/null. (;-))
 
 AUTHORS :
   * Code : Martin Duquesnoy <xorg62@gmail.com>
