--- a/README
+++ b/README
@@ -32,6 +32,8 @@ INSTALL :
 
 By default, wmfs logos are'nt installed. You can install it with : cmake -DWITH_LOGOS=ON ..
 
+If you have doxygen installed you can generate doxygen documentation via custom target 'make doc' in the build dir.
+
 DISTROS :
   · wmfs ebuild for Gentoo is available in the Sangor's overlay. More infos at http://wmfs.sangor.net/view/download/
   · wmfs port for FreeBSD in the way.
