--- a/README
+++ b/README
@@ -36,4 +36,4 @@ If you have doxygen installed you can generate doxygen documentation via custom 
 
 DISTROS :
   · wmfs ebuild for Gentoo is available in the Sangor's overlay. More infos at http://wmfs.sangor.net/view/download/
-  · wmfs port for FreeBSD in the way.
+  · wmfs port for FreeBSD at x11-wm/wmfs
