Man: Update (add -g option)

--- a/wmfs.1
+++ b/wmfs.1
@@ -13,7 +13,7 @@
 .SH "NAME"
 wmfs \- Window Manager From Scratch
 .SH "SYNOPSIS"
-\fBwmfs\fR [\fB\-v\fR] [\fB\-h\fR] [\fB\-i\fR] [\fB\-c <uicb_function> <cmd>\fR] [\fB\-s <string>\fR]
+\fBwmfs\fR [\fB\-v\fR] [\fB\-h\fR] [\fB\-i\fR] [\fB\-c <uicb_function> <cmd>\fR] [\fB\-g <argument>\fR] [\fB\-s <string>\fR]
 .sp
 .SH "DESCRIPTION"
 \fBWMFS\fR is a basic, lightweight and dynamic tiling windows manager for X\&.
@@ -23,6 +23,11 @@ wmfs \- Window Manager From Scratch
 \fB\-c <uicb_function> <cmd>\fR
 .RS 4
 Execute an uicb function to control WMFS\&.
+.RE
+.PP
+\fB\-g <argument>\fR
+.RS 4
+Show information about wmfs status\&.
 .RE
 .PP
 \fB\-s <string>\fR
