Man/Conf: Fixed some mistake, updated man and add one keybind to default conf.

--- a/wmfs.1
+++ b/wmfs.1
@@ -131,6 +131,11 @@ Increase the nmaster (+1)\fR
 Decrease the nmaster (-1)\fR
 .RE
 .PP
+\fBAlt + t\fR
+.RS 4
+Switch the current client with the master client\fR
+.RE
+.PP
 \fBAlt + p\fR
 .RS 4
 Make a launcher in the infobar to run an unix command\fR
@@ -160,7 +165,7 @@ WMFS isn\'t stable for now\&. So it certainly contains some bugs\&.
 Martin Duquesnoy <\fIxorg62@gmail\&.com\fR\&[1]>\&.
 .sp
 .SH "WWW"
-Main site: \fIhttp://wmfs\&.malikania\&.org\fR Bug tracker: \fIhttp://wmfs\&.malikania\&.org/projects/wmfs/issues\fR
+Main site: \fIhttp://wmfs\&.info\fR Bug tracker: \fIhttp://bugs\&.wmfs\&.info\fR
 .sp
 .SH "COPYING"
 WMFS is under the BSD license\&. See COPYING for more informations\&.
