Client/Layout: Remove tile_switch uicb function; add client_swap_{next, prev}.

--- a/wmfs.1
+++ b/wmfs.1
@@ -133,7 +133,12 @@ Decrease the nmaster (-1)\fR
 .PP
 \fBAlt + t\fR
 .RS 4
-Switch the current client with the master client\fR
+Swap the current client with the next\fR
+.RE
+.PP
+\fBAlt\-Shift + t\fR
+.RS 4
+Swap the current client with the previous\fR
 .RE
 .PP
 \fBAlt + p\fR
