Wmfs: Add -C option to load a configuration file

--- a/wmfs.1
+++ b/wmfs.1
@@ -13,12 +13,17 @@
 .SH "NAME"
 wmfs \- Window Manager From Scratch
 .SH "SYNOPSIS"
-\fBwmfs\fR [\fB\-v\fR] [\fB\-h\fR] [\fB\-i\fR] [\fB\-c <uicb_function> <cmd>\fR] [\fB\-g <argument>\fR] [\fB\-s <string>\fR]
+\fBwmfs\fR [\fB\-ihv\fR] [\fB\-C <file>\fR] [\fB\-c <uicb_function> <cmd>\fR] [\fB\-g <argument>\fR] [\fB\-s <string>\fR]
 .sp
 .SH "DESCRIPTION"
 \fBWMFS\fR is a basic, lightweight and dynamic tiling windows manager for X\&.
 .sp
 .SH "OPTIONS"
+.PP
+\fB\-C <file>\fR
+.RS 4
+Load a configuration file\&.
+.RE
 .PP
 \fB\-c <uicb_function> <cmd>\fR
 .RS 4
