ViWMFS: Add viwmfs.c.

--- a/wmfs.1
+++ b/wmfs.1
@@ -13,7 +13,7 @@
 .SH "NAME"
 wmfs \- Window Manager From Scratch
 .SH "SYNOPSIS"
-\fBwmfs\fR [\fB\-ihv\fR] [\fB\-C <file>\fR] [\fB\-c <uicb_function> <cmd>\fR] [\fB\-g <argument>\fR] [\fB\-s <string>\fR]
+\fBwmfs\fR [\fB\-ihv\fR] [\fB\-C <file>\fR] [\fB\-c <uicb_function> <cmd>\fR] [\fB\-g <argument>\fR] [\fB\-s <string>\fR]  [\fB\-V <viwmfs cmd>\fR]
 .sp
 .SH "DESCRIPTION"
 \fBWMFS\fR is a basic, lightweight and dynamic tiling windows manager for X\&.
@@ -38,6 +38,11 @@ Show information about wmfs status\&.
 \fB\-s <string>\fR
 .RS 4
 Set the bar(s) statustext\&.
+.RE
+.PP
+\fB\-V <viwmfs cmd>\fR
+.RS 4
+Manage WMFS with vi-like command\&.
 .RE
 .PP
 \fB\-v\fR
