Conf/ViWMFS: Add bind to set WMFS in ViWMFS mode in the default configuration and improve viwmfs function.

--- a/wmfs.1
+++ b/wmfs.1
@@ -156,6 +156,11 @@ Swap the current client with the previous\fR
 Make a launcher in the infobar to run an unix command\fR
 .RE
 .PP
+\fBAlt + Escape\fR
+.RS 4
+Set WMFS in ViWMFS mode. (see wmfs -V)\fR
+.RE
+.PP
 \fBAlt\-Shift + p\fR
 .RS 4
 Make a launcher in the infobar to run an ssh session\fR
