Fix some error in the manpage and in the information printed by the binary

--- a/wmfs.1
+++ b/wmfs.1
@@ -62,7 +62,7 @@ Print help information, then exit\&.
 .PP
 \fB\-i\fR
 .RS 4
-Print WMFS informations
+Print WMFS information
 .RE
 .SH "DEFAULT KEY BINDINGS"
 .PP
@@ -143,7 +143,7 @@ Increase the nmaster (+1)\fR
 .PP
 \fBAlt\-Shift + d\fR
 .RS 4
-Decrease the nmaster (-1)\fR
+Decrease the nmaster (\-1)\fR
 .RE
 .PP
 \fBAlt + t\fR
@@ -163,7 +163,7 @@ Make a launcher in the infobar to run an unix command\fR
 .PP
 \fBAlt + Escape\fR
 .RS 4
-Set WMFS in ViWMFS mode. (see wmfs -V)\fR
+Set WMFS in ViWMFS mode. (see wmfs \-V)\fR
 .RE
 .PP
 \fBAlt\-Shift + p\fR
@@ -193,7 +193,7 @@ Martin Duquesnoy <\fIxorg62@gmail\&.com\fR\&[1]>\&.
 Main site: \fIhttp://wmfs\&.info\fR Bug tracker: \fIhttp://bugs\&.wmfs\&.info\fR
 .sp
 .SH "COPYING"
-WMFS is under the BSD license\&. See COPYING for more informations\&.
+WMFS is under the BSD license\&. See COPYING for more information\&.
 .sp
 .SH "NOTES"
 .IP " 1." 4
