--- a/TODO
+++ b/TODO
@@ -1,5 +1,24 @@
-  · Add Doxygen comment <-> OK
-  · Mouse bindings in the config file
-  · Can change client position in the tile grid
-  · Fix all the bug \o/
-  · XCB ?
+                       ,
+                      dM
+                      MMr
+                     4MMML                  .
+                     MMMMM.                xf
+     .              "M6MMM               .MM-
+      Mh..          +MM5MMM            .MMMM
+      .MMM.         .MMMMML.          MMMMMh
+       )MMMh.        MM5MMM         MMMMMMM
+        3MMMMx.     'MMM3MMf      xnMMMMMM"
+        '*MMMMM      MMMMMM.     nMMMMMMP"
+          *MMMMMx    "MMM5M\    .MMMMMMM=
+           *MMMMMh   "MMMMM"   JMMMMMMP
+             MMMMMM   GMMMM.  dMMMMMM            .
+              MMMMMM  "MMMM  .MMMMM(        .nnMP"
+   ..          *MMMMx  MMM"  dMMMM"    .nnMMMMM*
+    "MMn...     'MMMMr 'MM   MMM"   .nMMMMMMM*"
+     "4MMMMnn..   *MMM  MM  MMP"  .dMMMMMMM""
+       ^MMMMMMMMx.  *ML "M .M*  .MMMMMM**"
+          *PMMMMMMhn. *x > M  .MMMM**""
+             ""**MMMMhx/.h/ .=*"
+                      .3P"%....
+                    nP"     "*MMnx
+
