add tag_client_and_set uicb function in man

--- a/wmfs.1
+++ b/wmfs.1
@@ -560,6 +560,9 @@ set next/previous tag\&.
 \fB\ tag_client\fR
 tag the client\&.
 .PP
+\fB\ tag_client_and_set\fR
+teg the client and set the tag\&.
+.PP
 \fB\ tag_move_client_next/prev\fR
 tag the client with next/previous tag\&.
 .PP
