update man with toggle_ignore_tag uicb function

--- a/wmfs.1
+++ b/wmfs.1
@@ -63,6 +63,11 @@ Exit WMFS
 Toggle free the selected client
 .RE
 .PP
+\fBSuper + Shift + f \fR
+.RS 4
+Toggle ignore_tag the selected client
+.RE
+.PP
 \fBAlt + Tab\fR
 .RS 4
 Give the focus to the next client
@@ -624,8 +629,10 @@ move focus to previous tab-client\&.
 give focus to client with a clic\&.
 .PP
 \fB\ client_toggle_free\fR
-togle free the client\&.
+toggle free the selected client\&.
 .PP
+\fB\ client_toggle_ignore_tag\fR
+toggle ignore_tag the selected client\&.
 \fB\ client_tab_next_opened\fR
 open the client in a tab\&.
 .PP
