add autofocus in man & wmfsrc

--- a/wmfs.1
+++ b/wmfs.1
@@ -427,6 +427,9 @@ mouse actions on client\&.
 .PP
 \fB\ padding:\fR
 enable padding between clients. default is 0\&.
+.PP
+\fB\ autofocus:\fR
+give focus to new created clients. default is false\&.
 .RE
 .PP
 .RE
