add infobar_toggle_hide in wmfsrc & man

--- a/wmfs.1
+++ b/wmfs.1
@@ -68,6 +68,11 @@ Toggle free the selected client
 Toggle ignore_tag the selected client
 .RE
 .PP
+\fBSuper + Shift + h \fR
+.RS 4
+Toggle infobar visibility
+.RE
+.PP
 \fBAlt + Tab\fR
 .RS 4
 Give the focus to the next client
@@ -612,6 +617,11 @@ display tag with a clic on tag button\&.
 \fB\ tag_new/del\fR
 .RS 4
 add/delete a tag\&.
+.RE
+.PP
+\fB infobar_toggle_hide\fR
+.RS 4
+toggle specific infobar visibility (infobar_name as cmd)\&.
 .RE
 .PP
 \fB\ layout_vmirror\fR
