--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wmfs (2~beta201206-3) unstable; urgency=low
+
+  * No hardening-related Lintiant warnings 
+
+ -- Mickaël Raybaud-Roig <raybaudroigm@gmail.com>  Sun, 24 Jun 2012 16:40:54 +0200
+
 wmfs (2~beta201206-2) unstable; urgency=low
 
   * Fixed some Lintian warnings
