Added documentation into the man page wmfs(1) for layout_serialize_set and layout_unserialize_set

--- a/wmfs.1
+++ b/wmfs.1
@@ -649,6 +649,16 @@ back to previous set layout\&.
 go to next set layout\&.
 .RE
 .PP
+\fB\ layout_serialize_set\fR
+.RS 4
+serialize the current set layout to a file (in .config/wmfs/layout/)\&.
+.RE
+.PP
+\fB\ layout_deserialize_set\fR
+.RS 4
+deserialize a set layout from a file (in .config/wmfs/layout) and apply it\&.
+.RE
+.PP
 \fB\ layout_integrate_left/right/top/bottom\fR
 .RS 4
 client integration in the client zone by direction\&.
